# ayed_listas_taller

./: CMakeLists.txt  README.md  main.cpp
include/: catalogo.hpp  lista_circular.hpp  nodo_lc.hpp  serie.hpp
src/: catalogo.cpp  serie.cpp
